--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -28,13 +28,13 @@ main {
     min-height: 100vh;
     max-width: 2560px;
     margin: auto;
-    overflow: visible;
+    overflow: hidden;
 }
 
 .section-1 {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 532px 640px 100px;
+    grid-template-rows: 434px 330px 200px;
     color: var(--dark-green);
     margin: auto;
     position: relative;
@@ -94,6 +94,39 @@ main {
         }
     }
 }
+
+.video-section {
+    max-width: 1213px;
+    max-height: 629px;
+    margin: auto;
+    border-radius: 40px;
+    position: relative;
+    overflow: hidden;
+
+    .video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+
+    .video-play-icon {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        background: url('/apie-mus/video-play-icon.svg');
+        width: 100px;
+        height: 100px;
+    }
+
+    .video-play-icon.hidden {
+        visibility: hidden;
+    }
+}
+
 
 .timeline {
         .dates {
