--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -101,12 +101,15 @@ main {
     margin: auto;
     border-radius: 40px;
     position: relative;
+    
+    margin-bottom: 100px;
     overflow: hidden;
 
     .video {
         object-fit: cover;
         width: 100%;
         height: 100%;
+     
     }
 
 
