--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -2,24 +2,12 @@
 footer {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 2fr 1fr 1fr 1fr;
+    grid-auto-rows: 1fr 1fr 0.2fr 0.5fr;
     width: 100%;
     height: 100%;
     position: relative;
     color: var(--green-light);
-
-    // &::before {
-    //     content: "";
-    //     position: absolute;
-    //     top: 16%;
-    //     left: -50%;
-    //     width: 100%;
-    //     height: 83%;
-    //     background: var(--dark-green);
-    //     z-index: 1;
-    //     transform: rotate(-4deg);
-    //     z-index: -1;
-    // }
+    z-index: 1;
 
     .footer-forma {
         grid-column: 1/6;
@@ -27,7 +15,6 @@ footer {
         height: 100%;
         width: 92%;
         z-index: -1;
-        display: block;
     }
 
     .description {
@@ -142,8 +129,6 @@ footer {
 
 
     @media (max-width: 900px){
-        grid-template-columns: repeat(5, 180px);
-
         .description {
             font-size: 12px;
         }
@@ -158,15 +143,13 @@ footer {
     }
 
 
-    @media (max-width: 1200px){
-        grid-template-rows: 2fr 2fr 1fr 2fr;
+    @media (max-width: 1440px){
+        grid-template-rows: 3fr 4fr 0fr 3fr;
 
         .footer-forma {
             width: 1200px;
         }
-    }
 
-    @media (max-width: 1440px){
         .social {
             margin-bottom: 15px;
         }
@@ -175,12 +158,6 @@ footer {
             margin-top: 15px;
         }
     }
-
-    @media (max-width: 1600px) {
-        grid-template-rows: 3fr 2fr 1fr 1fr;
-    }
-
-    @media (min-width: 1600px) {
-        grid-template-rows: 2.5fr 2fr 1fr 3fr;
-    }
 }
+
+
