--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -102,7 +102,7 @@ main {
         color: var(--green-light);
         width: 70%;
         position: absolute;
-        top: 173px;
+        top: 100px;
         right: 42px;
 
         h2 {
@@ -129,20 +129,35 @@ main {
 
     .shape-3 {
         position: absolute;
-        right: 200px;
-        width: 523px;
-        height: 635px;
-        background: url('/pagrindines-veiklos/foto-1.png') no-repeat;
-        background-size: cover;
+        top: 50px;
+        right: 221px;
+        width: 511px;
+        height: 506px;
+        object-fit: cover;
         overflow: hidden;
     }
     
-    .shape-3 img {
+    .foto-1 {
         position: absolute;
-        top: 95px;
-        left: 18px;
-        width: 797px;
-        height: 100%;
+        top: -105px;
+        right: 18px;
+        width: 728.018px;
+        height: 728.019px;
+
+        .shape-2 {
+            position: absolute;
+            right: -180px;
+            top: 5px;
+            width: 120%;
+            height: 100px;
+            background: url('/pagrindines-veiklos/shape-2.svg');
+            background-repeat: no-repeat;
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     .brands {
@@ -197,23 +212,22 @@ main {
     width: 120%;
     left: -100px;
 
-    .shape-3 {
+    .foto-2 {
         position: absolute;
-        right: 200px;
-        width: 523px;
-        height: 635px;
-        background: url('/pagrindines-veiklos/output-2.png') no-repeat;
-        background-size: cover;
-        overflow: hidden;
-    }
-    
-    .shape-3 img {
-        position: absolute;
-        top: 95px;
+        top: 100px;
         left: 18px;
-        width: 797px;
-        height: 100%;
+        width: 800px;
+        height: 1027.163px;
+        border-radius: 0 200px 0 0;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
+
 
     .brands {
         display: flex;
