--- a/src/styles/veiklos-kryptys.scss
+++ b/src/styles/veiklos-kryptys.scss
@@ -168,160 +168,168 @@ header {
     width: 80%;
 }
 
+// Old footer
+// footer {
+//     display: grid;
+//     grid-template-columns: repeat(5, 1fr);
+//     grid-auto-rows: 1fr 1fr 0.2fr 0.5fr;
+//     width: 100%;
+//     height: 100%;
+//     position: relative;
+//     color: var(--green-light);
 
-footer {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 1fr 1fr 0.2fr 0.5fr;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    color: var(--green-light);
+//     .footer-forma {
+//         grid-column: 1/6;
+//         grid-row: 1/5;
+//         height: 100%;
+//         width: 92%;
+//         z-index: -1;
+//     }
 
-    .footer-forma {
-        grid-column: 1/6;
-        grid-row: 1/5;
-        height: 100%;
-        width: 92%;
-        z-index: -1;
-    }
-
-    .description {
-        grid-column: 1/3;
-        grid-row: 2;
-        font-size: clamp(14px, 2vw, 25px);
-        width: 90%;
-        padding-left: 78px;
-        padding-bottom: 30px;
-    }
+//     .description {
+//         grid-column: 1/3;
+//         grid-row: 2;
+//         font-size: clamp(14px, 2vw, 25px);
+//         width: 90%;
+//         padding-left: 78px;
+//         padding-bottom: 30px;
+//     }
     
-    .contact-1-img {
-        width: 2vw;
-        height: 2vw;
-        align-self: end;
-        margin-bottom: 15px;
-        grid-column: 3/4;
-        grid-row: 1;
-    }
+//     .contact-1-img {
+//         width: 2vw;
+//         height: 2vw;
+//         align-self: end;
+//         margin-bottom: 15px;
+//         grid-column: 3/4;
+//         grid-row: 1;
+//     }
 
-    .contact-1 {
-        grid-column: 3/4;
-        grid-row: 2;
-        font-size: clamp(11px, 1vw, 21px);
-    }
+//     .contact-1 {
+//         grid-column: 3/4;
+//         grid-row: 2;
+//         font-size: clamp(11px, 1vw, 21px);
+//     }
 
-    .contact-2-img {
-        width: 2vw;
-        height: 2vw;
-        align-self: end;
-        margin-bottom: 15px;
-        grid-column: 4/5;
-        grid-row: 1;
-        transform: translate(-78px, 0);
-    }
+//     .contact-2-img {
+//         width: 2vw;
+//         height: 2vw;
+//         align-self: end;
+//         margin-bottom: 15px;
+//         grid-column: 4/5;
+//         grid-row: 1;
+//         transform: translate(-78px, 0);
+//     }
 
-    .contact-2 {
-        grid-column: 4/5;
-        grid-row: 2;
-        font-size: clamp(11px, 1vw, 21px);
-        transform: translate(-78px, 0);
-    }
+//     .contact-2 {
+//         grid-column: 4/5;
+//         grid-row: 2;
+//         font-size: clamp(11px, 1vw, 21px);
+//         transform: translate(-78px, 0);
+//     }
 
-    .contact-title {
-        margin-bottom: 2.2vw;
-    }
+//     .contact-title {
+//         margin-bottom: 2.2vw;
+//     }
 
-    hr {
-        background: var(--green-light);
-        width: 100%;
-        height: 1px;
-        border: none;
-        grid-column: 1/5;
-        grid-row: 3;
-        align-self: end;
-        transform: translate(78px, 0);
+//     hr {
+//         background: var(--green-light);
+//         width: 100%;
+//         height: 1px;
+//         border: none;
+//         grid-column: 1/5;
+//         grid-row: 3;
+//         align-self: end;
+//         transform: translate(78px, 0);
         
-    }
+//     }
 
-    .social {
-        grid-column: 1/5;
-        grid-row: 3;
-        display: flex;
-        gap: 30px;
-        font-size: clamp(11px, 1.2vw, 21px);
-        margin-bottom: 30px;
-        margin-left: 78px;
+//     .social {
+//         grid-column: 1/5;
+//         grid-row: 3;
+//         display: flex;
+//         gap: 30px;
+//         font-size: clamp(11px, 1.2vw, 21px);
+//         margin-bottom: 30px;
+//         margin-left: 78px;
 
-        a {
-            color: var(--green-light);
-            opacity: 0.7;
-            transition: 0.3s;
-            position: relative;
-            overflow: hidden;
-        }
+//         a {
+//             color: var(--green-light);
+//             opacity: 0.7;
+//             transition: 0.3s;
+//             position: relative;
+//             overflow: hidden;
+//         }
 
-        a:hover {
-            opacity: 1;
-        }
+//         a:hover {
+//             opacity: 1;
+//         }
 
-        a::before {
-            content: "";
-            position: absolute;
-            bottom: -5%;
-            width: 100%;
-            height: 3px;
-            background:  var(--green-bright);
-            transform: translate(-105%);
-            transition: 0.3s;
-        }
+//         a::before {
+//             content: "";
+//             position: absolute;
+//             bottom: -5%;
+//             width: 100%;
+//             height: 3px;
+//             background:  var(--green-bright);
+//             transform: translate(-105%);
+//             transition: 0.3s;
+//         }
 
-        a:hover::before {
-            transform: translate(0%);
-        }
-    }
+//         a:hover::before {
+//             transform: translate(0%);
+//         }
+//     }
 
-    .copywrites {
-        padding-left: 78px;
-        grid-column: 1/5;
-        grid-row: 4;
-        display: flex;
-        gap: 50px;
-        margin-top: 30px;
-        color: var(--green-light);
-        font-size: clamp(11px, 1.2vw, 21px);
+//     .copywrites {
+//         padding-left: 78px;
+//         grid-column: 1/5;
+//         grid-row: 4;
+//         display: flex;
+//         gap: 50px;
+//         margin-top: 30px;
+//         color: var(--green-light);
+//         font-size: clamp(11px, 1.2vw, 21px);
 
-        a {
-            cursor: url("/icons/cursor-green.svg"), pointer;
-            color: var(--green-light);
-        }
-    }
-
-
-    @media (max-width: 900px){
-        .description {
-            font-size: 12px;
-        }
-
-        .contact-1, .contact-2 {
-            font-size: 8px;
-        }
-
-        .contact-2-img, .contact-2 {
-            transform: translate(0);
-        }
-    }
+//         a {
+//             cursor: url("/icons/cursor-green.svg"), pointer;
+//             color: var(--green-light);
+//         }
+//     }
 
 
-    @media (max-width: 1440px){
-        .social {
-            margin-bottom: 15px;
-        }
+//     @media (max-width: 900px){
+//         .description {
+//             font-size: 12px;
+//         }
 
-        .copywrites {
-            margin-top: 15px;
-        }
-    }
-}
+//         .contact-1, .contact-2 {
+//             font-size: 8px;
+//         }
+
+//         .contact-2-img, .contact-2 {
+//             transform: translate(0);
+//         }
+//     }
+
+//     @media (max-width: 1200px){
+//         grid-template-rows: 2fr 2fr 1fr 2fr;
+
+//         .footer-forma {
+//             width: 1200px;
+//         }
+//     }
+
+
+//     @media (max-width: 1440px){
+//         .social {
+//             margin-bottom: 15px;
+//         }
+
+//         .copywrites {
+//             margin-top: 15px;
+//         }
+//     }
+// }
 
 
 @media (max-width: 1000px){
