--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -96,20 +96,21 @@ main {
 }
 
 .video-section {
-    max-width: 1213px;
-    max-height: 629px;
-    margin: auto;
     border-radius: 40px;
     position: relative;
-    
-    margin-bottom: 100px;
-    overflow: hidden;
 
     .video {
+        display: block;
         object-fit: cover;
-        width: 100%;
-        height: 100%;
+        width: 90%;
+        height: 90%;
+
+        border-radius: 50px;
      
+        max-width: 1213px;
+        max-height: 629px;
+        margin: auto;
+        margin-bottom: 100px;
     }
 
 
@@ -121,8 +122,10 @@ main {
         bottom: 0;
         margin: auto;
         background: url('/apie-mus/video-play-icon.svg');
-        width: 100px;
-        height: 100px;
+        background-size: contain;
+        width: clamp(70px, 6vw, 100px);
+        height: clamp(70px, 6vw, 100px);
+        z-index: 1;
     }
 
     .video-play-icon.hidden {
