--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -38,6 +38,8 @@ main {
     color: var(--dark-green);
     margin: auto;
     position: relative;
+    clip-path: inset(0 0 0 100%);
+    transform: translateX(-300px);
 
     .shape-1 {
         background: url('/apie-mus/shape-1.svg');
