--- a/src/styles/pagrindines-veiklos.scss
+++ b/src/styles/pagrindines-veiklos.scss
@@ -28,7 +28,7 @@ main {
     min-height: 100vh;
     max-width: 2000px;
     margin: auto;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .section-1 {
