--- a/src/styles/veiklos-kryptys.scss
+++ b/src/styles/veiklos-kryptys.scss
@@ -20,10 +20,17 @@ header {
     }
 }
 
+main {
+    min-height: 100vh;
+    max-width: 2560px;
+    margin: auto;
+    // overflow: hidden;
+}
+
 
 .section-1 {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(300px, 1fr));
     grid-template-rows: 532px 465px 616px;
     color: var(--blue-dark);
     max-width: 2560px;
