--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -23,8 +23,12 @@ header {
 }
 
 main {
+    min-height: 100vh;
+    max-width: 2560px;
+    margin: auto;
     overflow: hidden;
 }
+
 
 header {
     .logo {
