--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -58,14 +58,14 @@
 	}
 	
 	button {
-		font-family: "CircularXXWeb-Book";
+		font-family: "CircularXXSub-Book";
 		height: 50px;
 		font-size: 1.2em;
 	}
 	
-	button, p {
+	button, p, a {
 		font-size: clamp(16px, 1.2vw, 25px);
-		font-family: 'CircularXXWeb-Book';
+		font-family: "CircularXXSub-Book";
 	}
 
 	h1 {
@@ -79,7 +79,7 @@
 
 	h3 {
 		font-weight: 400;
-		font-size: clamp(30px, 2.2vw, 42px);
+		font-size: clamp(24px, 2.2vw, 42px);
 	}
 
 	.button {
@@ -99,4 +99,32 @@
 	.button:hover {
 		cursor: url('/icons/pointer-green.svg'),pointer;
 		border-radius: 0;
+	}
+
+	.button-outline {
+		text-decoration: none;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background: none;
+		border: 1px solid var(--dark-green);
+		color: var(--dark-green);
+		width: 150px;
+		height: 50px;
+		position: relative;
+		transition: 0.3s;
+
+
+		.button-outline-icon {
+			position: absolute;
+			top: -2%;
+			right: -50%;
+			width: 100%;
+			height: 105%;
+		}
+	}
+
+	.button-outline:hover {
+		background: var(--dark-green);
+		color: var(--green-light);
 	}
