--- a/src/styles/naujienos-vidus.scss
+++ b/src/styles/naujienos-vidus.scss
@@ -36,10 +36,10 @@ main {
     overflow: hidden;
 }
 
-.news {
+.news-content {
     display: grid;
     grid-template-columns: repeat(6, minmax(230px, 1fr));
-    grid-auto-rows: minmax(420px, auto);
+    grid-auto-rows: 280px;
     color: var(--dark-green);
     max-width: 2043px;
     margin: auto;
@@ -47,20 +47,9 @@ main {
     clip-path: inset(0 0 0 100%);
     margin-bottom: 50px;
 
-    h1 {
-        font-weight: normal;
-        grid-column: 2/5;
-        grid-row: 1;
-        align-self: end;
-     }
-
     .content {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        width: 100%;
-        grid-template-rows: 200px 1fr 1fr 1fr;
         font-weight: 400;
-        grid-column: 1;
+        grid-column: 2/6;
         grid-row: 2;
         right: 1116px;
         color: var(--dark-green);
@@ -68,77 +57,7 @@ main {
         h2 {
             margin: 50px 0;
         }
-
-        .categories {
-            display: flex;
-            gap: 10px;
-            grid-column: 3;
-            align-self: end;
-            margin-bottom: 50px;
-        }
     }
 
-    article {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
-        grid-auto-rows: minmax(100px, 1fr);
-        grid-column: span 4;
-        width: 100vw;
-        
-        .article-image {
-            grid-column: 1/4;
-            width: 90%;
-            max-height: 350px;
-            object-fit: cover;
-        }
-
-        .article-content {
-            grid-column: 4/6;
-            width: 130%;
-            margin-top: 15px;
-            display: flex;
-            flex-direction: column;
-            gap: 30px; 
-        }
-    }
-
-    article:first-of-type img {
-        border-radius: 0 100px 0 0;
-    }
-
-    article:last-of-type img {
-        border-radius: 0 0 100px 0;
-    }
-
-    .news-navigation {
-        grid-row: 6;
-        grid-column: 3;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-
-        svg:hover {
-            path {
-                transition: 0.3s;
-            }
-            path:nth-of-type(1) {
-                fill: var(--dark-green);
-            }
-
-            path:nth-of-type(2) {
-                fill: var(--green-light);
-            }
-        }
-
-        .go-right {
-            transform: rotate(180deg);
-        }
-    }
-}
-
-
-@media (max-width: 900px) {
-    .news article .article-content {
-        gap: 15px;
-    }
+  
 }
