--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -387,8 +387,8 @@ h1 {
         background: url('/landing/form-8.svg');
         background-repeat: no-repeat;
         position: absolute;
-        top: -140px;
-        right: 96px;
+        top: -146px;
+        right: 93px;
         transform: rotate(4deg) scale(1.15);
     }
     
@@ -458,112 +458,88 @@ h1 {
 // Footer
 footer {
     display: grid;
-    grid-template-columns: repeat(6, minmax(190px, 1fr));
-    grid-auto-rows: minmax(250px, 1fr);
-    height: 450px;
-    line-height: 25px;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: 1fr 1fr 0.2fr 0.5fr;
+    width: 100%;
+    height: 100%;
     position: relative;
-    top: -400px;
-    margin-bottom: -300px;
+    color: var(--green-light);
+    z-index: 1;
+    margin-top: -362px;
 
-  
-
-    .footer-shape-1 {
-        grid-column: 1;
-        grid-row: 1;
-        width: 1619.082px;
-        height: 709.01px;
-        background: url('/landing/form-10.svg');
-        background-repeat: no-repeat;
-        background-size: contain;
-        position: absolute;
-        top: -1px;
-        right: 198px;
-
-        &::before {
-            content: "";
-            position: absolute;
-            top: 69px;
-            left: -538px;
-            width: 100%;
-            height: 74%;
-            background: var(--dark-green);
-            transform: rotate(-4deg);
-        }
-    }
-
-    .footer-shape-2 {
-        grid-column: 1;
-        grid-row: 1;
-        width: 510px;
-        height: 510px;
-        background: url('/landing/form-9.svg');
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: center;
-        position: absolute;
-        top: -270px;
-        right: -25px;
-        transform: scale(1.05);
+    .footer-forma {
+        grid-column: 1/6;
+        grid-row: 1/5;
+        height: 100%;
+        width: 92%;
         z-index: -1;
-
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 19%;
-            right: -85%;
-            width: 100%;
-            height: 79%;
-            background: var(--green-spot);
-        }
     }
 
-    .content {
-        position: relative;
-        top: 200px;
-        left: 70px;
-        grid-column: 1/5;
-        grid-row: 1;
-        max-width: 1500px;
-        z-index: 1;
+    .description {
+        grid-column: 1/3;
+        grid-row: 2;
+        font-size: clamp(14px, 2vw, 25px);
+        width: 90%;
+        padding-left: 78px;
+        padding-bottom: 30px;
     }
-
-    .grid {
-        display: grid;
-        grid-template-columns: 3fr 1fr 1fr;
-        color: var(--green-light);
-    }
-
-    .grid .description {
-        font-size: clamp(16px, 1.3vw, 25px);
-        line-height: 30px;
-    }
-
-    .contact {
-        position: relative;
-        top: -57px;
-        margin-left: 60px;
-        svg {
-            font-size: 1em;
-            margin-bottom: 15px;
-            transform: translate(0, 10px);
-        }
-
-        .contact-title {
-            margin-bottom: 30px;
-        }
-
-        p {
-            color: var(--green-light);
-        }
     
+    .contact-1-img {
+        width: 2vw;
+        height: 2vw;
+        align-self: end;
+        margin-bottom: 15px;
+        grid-column: 3/4;
+        grid-row: 1;
+    }
+
+    .contact-1 {
+        grid-column: 3/4;
+        grid-row: 2;
+        font-size: clamp(11px, 1vw, 21px);
+    }
+
+    .contact-2-img {
+        width: 2vw;
+        height: 2vw;
+        align-self: end;
+        margin-bottom: 15px;
+        grid-column: 4/5;
+        grid-row: 1;
+        transform: translate(-78px, 0);
+    }
+
+    .contact-2 {
+        grid-column: 4/5;
+        grid-row: 2;
+        font-size: clamp(11px, 1vw, 21px);
+        transform: translate(-78px, 0);
+    }
+
+    .contact-title {
+        margin-bottom: 2.2vw;
+    }
+
+    hr {
+        background: var(--green-light);
+        width: 100%;
+        height: 1px;
+        border: none;
+        grid-column: 1/5;
+        grid-row: 3;
+        align-self: end;
+        transform: translate(78px, 0);
+        
     }
 
     .social {
+        grid-column: 1/5;
+        grid-row: 3;
         display: flex;
         gap: 30px;
+        font-size: clamp(11px, 1.2vw, 21px);
         margin-bottom: 30px;
+        margin-left: 78px;
 
         a {
             color: var(--green-light);
@@ -580,10 +556,10 @@ footer {
         a::before {
             content: "";
             position: absolute;
-            bottom: 0px;
+            bottom: -5%;
             width: 100%;
-            height: 2px;
-            background: var(--green-spot);
+            height: 3px;
+            background:  var(--green-bright);
             transform: translate(-105%);
             transition: 0.3s;
         }
@@ -593,24 +569,53 @@ footer {
         }
     }
 
-    hr {
-        width: 100%;
-        height: 1px;
-        background: var(--green-light);
-        border: none;
-    }
-
     .copywrites {
+        padding-left: 78px;
+        grid-column: 1/5;
+        grid-row: 4;
         display: flex;
         gap: 50px;
-        margin-top: 15px;
+        margin-top: 30px;
         color: var(--green-light);
+        font-size: clamp(11px, 1.2vw, 21px);
 
         a {
+            cursor: url("/icons/cursor-green.svg"), pointer;
             color: var(--green-light);
         }
     }
+
+
+    @media (max-width: 900px){
+        .description {
+            width: 80%;
+            font-size: 12px;
+        }
+
+        .contact-1, .contact-1-img {
+            transform: translate(-70px, 0);
+        }
+
+        .contact-2, .contact-2-img {
+            transform: translate(-140px, 0);
+        }
+
+    }
+
+
+    @media (max-width: 1440px){
+        grid-template-rows: 3fr 4fr 0fr 3fr;
+
+        .social {
+            margin-bottom: 15px;
+        }
+
+        .copywrites {
+            margin-top: 15px;
+        }
+    }
 }
+
 
 
 // Media
@@ -859,12 +864,6 @@ footer {
             left: 554px;
         }
     }
-
-    footer {
-        .footer-shape-1 {
-            top: 98px !important;
-        }
-    }
 }
 
 @media (min-width: 1001px) and (max-width: 1200px){
@@ -1013,7 +1012,7 @@ footer {
     .news {
         .form-7 {
             top: -25px;
-            left: -228px;
+            left: -224px;
         }
 
         .form-8 {
@@ -1027,7 +1026,7 @@ footer {
     
         .news-img {
             width: 50%;
-            top: -75px;
+            top: -165px;
             right: 0;
             left: 795px;
         }
@@ -1087,29 +1086,14 @@ footer {
         }
 
         .form-8 {
-            top: -135px;
+            top: -140px;
         }
     
         .news-img {
             width: 40%;
-            top: -72px;
+            top: -165px;
             right: 0;
             left: 1053px;
-        }
-    }
-}
-
-@media (max-width: 1600px){
-    footer {
-        .footer-shape-1 {
-            left: -292px;
-            right: 0;
-            top: 5px;
-        }
-
-        .footer-shape-2 {
-            left: 1036px;
-            right: 0;
         }
     }
 }
@@ -1124,6 +1108,10 @@ footer {
             left: 261px;
         }
     }
+
+    .news .news-img {
+        top: -171px;
+    }
 }
 
 
@@ -1137,7 +1125,7 @@ footer {
         }
 
         .form-8 {
-            top: -125px;
+            top: -131px;
         }
     
         .news-img {
@@ -1145,19 +1133,6 @@ footer {
             right: 0;
             left: 1558px;
             border-radius: 250px 0 0 0;
-        }
-    }
-
-    footer {
-        top: -405px;
-        .footer-shape-1 {
-            right: 0;
-            left: -108px;
-        }
-
-        .footer-shape-2 {
-            right: 0;
-            left: 1833px;
         }
     }
 }
