--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,6 +9,10 @@ footer {
     color: var(--green-light);
     z-index: 1;
 
+    a {
+        text-decoration: none;
+    }
+
     .footer-forma {
         grid-column: 1/6;
         grid-row: 1/5;
