--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -3,6 +3,7 @@ body {
 }
 
 main {
+    max-height: 100vh;
     max-width: 2000px;
     overflow: hidden;
     margin: auto;
@@ -104,25 +105,20 @@ header {
         }
     }
 
+    
+    h1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        grid-column: 1/4;
+        grid-row: 2/3;
+        font-weight: 400;
+        max-width: 500px;
+        transform: translate(13vw, 0vw);
+        color: var(--dark-green);
+    }
 }
 
-
-h1 {
-    position: relative;
-    grid-column: 1/4;
-    grid-row: 2/3;
-    font-weight: 400;
-    max-width: 500px;
-    transform: translate(13vw, 0vw);
-    color: var(--green-light);
-}
-
-h1 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #004A4E;
-}
 
 
 .iniciatives {
@@ -137,486 +133,26 @@ h1 {
 
     h2 {
         font-size: clamp(24px, 3vw, 54px);
-        font-weight: 400;
         margin-bottom: 15px;
     }
 
-    img {
-        width: clamp(24px, 2.5vw, 47px);
-        height: clamp(24px, 2.5vw, 47px);
-    }
-}
-
-
-.partners {
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
-    grid-column: 1/7;
-    grid-row: 5;
-    position: relative;
-    top: -190px;
-
-    p {
-        text-align: center;
-        color: var(--dark-green);
-        width: 30%;
-        left: 50px;
-        position: relative;
-        transform: translate(-20px, -199px);
-    }
-}
-
-
-.active-areas {
-    position: relative;
-    width: 2500px;
-    height: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    transform: rotate(-5deg) translate(-100px, -200px);
-    overflow: hidden;
-
-    .content {
-        width: 120px;
-        transform: rotate(5deg);
-        position: relative;
-        top: 21px;
-        left: -567px;
-        font-size: 3vw;
-        z-index: 1;
-
-        svg {
-            position: absolute;
-            right: -146%;
-            max-width: 50px;
-            max-height: 50px;
-        }
-
-        h2 {
-            font-weight: 400;
-        }
-    }
-
-    .content::before {
-        content: "";
-        position: absolute;
-        bottom: -27px;
-        left: 0;
-        width: 200%;
-        height: 2px;
-        background: var(--green-light);
-    }
-
-    .left {
+    .go-back {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 30%;
-        height: 100%;
-        color: white;
-        position: relative;
-
-        &:hover .left-img {
-            transform: scale(1.1);
-        }
-
-        .left-img {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            object-fit: cover;
-            z-index: -1;
-            transition: 0.3s;
-        }
-
-        .content {
-            position: relative;
-            top: -50px;
-            left: -150px;
-        }
-    }
-
-    .left::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: #004A4E66;
-      }
-
-    .center {
-        background: url('/svg/center.svg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        height: 102%;
-        width: 445px;
-        position: absolute;
-        top: -1%;
-        left: 554px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transform: rotate(4deg);
-        z-index: 1;
-
-        h2 {
-            transform: rotate(-87deg);
-            position: relative;
-            font-weight: 400;
-            color: var(--green-light);
-        }
-    }
-
-    
-    .right {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 65%;
-        height: 100%;
-        color: white;
-        position: relative;
-        
-
-        &:hover .right-img {
-            transform: scale(1.1);
-        }
-
-        .right-img {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            object-fit: cover;
-            z-index: -1;
-            transition: 0.3s;
-        }
-    }
-
-    .right::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: #004A4E66;
-      }
-}
-
-// Partnership
-.partnership {
-    display: grid;
-    grid-template-columns: repeat(6, minmax(190px, 1fr));
-    position: relative;
-    top: -177px;
-    left: 100px;
-
-    @media (min-width: 2000px){
-        grid-template-columns: repeat(6, 350px);
-    }
-
-    .content {
-        grid-column: 1/6;
-        grid-row: 2/5;
-    }
-
-    .shape-left{
-        grid-column: 1/6;
-        grid-row: 1/5;
-        background: url('/svg/partnership-shape-left.svg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        width: 921px;
-        height: 1164px;
-        position: relative;
-        top: -50px;
-        left: -200px;
-        z-index: -1;
-    }
-
-    h2 {
-        color: var(--dark-green);
-        margin-bottom: 50px;
-    }
-}
-
-.news {
-    width: 105%;
-    background: var(--green-spot);
-    display: grid;
-    grid-template-columns: repeat(6, minmax(190px, 1fr));
-    grid-auto-rows: minmax(250px, 1fr);
-    position: relative;
-    transform: rotate(-4deg) translate(0px, -335px);
-    overflow: hidden;
-    padding-bottom: 120px;
-
-    .news-category {
-        color: var(--dark-green);
-        text-decoration: underline;
-    }
-
-    .form-7 {
-        width: 1557px;
-        height: 776px;
-        background: url('/landing/form-7.svg');
-        background-repeat: no-repeat;
-        position: absolute;
-        top: -29px;
-        right: 532px;
-        transform: rotate(4deg) scale(1.1);
-
-        &::before {
-            content: "";
-            position: absolute;
-            top: 78px;
-            left: -50%;
-            height: 90%;
-            width: 50%;
-            background: var(--green-spot);
-        }
-    }
-
-    .form-8 {
-        width: 650px;
-        height: 788px;
-        background: url('/landing/form-8.svg');
-        background-repeat: no-repeat;
-        position: absolute;
-        top: -146px;
-        right: 93px;
-        transform: rotate(4deg) scale(1.15);
-    }
-    
-    .news-img {
-        width: 45%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: -75px;
-        right: 163px;
-        border-radius: 274px 0 0 0;
-        z-index: -1;
-    }
-
-    .content {
-        grid-column: 1/6;
-        grid-row: 1/4;
-        position: relative;
-        top: 150px;
-        left: 150px;
-        max-width: 728px;
-        font-weight: normal;
-        color: var(--dark-green);
-        transform: rotate(4deg);
-
-        h2 {
-            line-height: 60px;
-            margin: 30px 0;
-        }
-
-        p {
-            margin-bottom: 30px;
-            max-width: 500px;
-        }
-
-        button {
-            background: none;
-            border: 1px solid var(--green-bright);
-            color: var(--green-bright);
-            width: 150px;
-            height: 50px;
-            position: relative;
-            transition: 0.3s;
-
-            &::before {
-                content: "";
-                position: absolute;
-                top: -2%;
-                right: -49%;
-                width: 100%;
-                height: 105%;
-                background: url('/icons/arrow.svg');
-                background-size: contain;
-                background-repeat: no-repeat;
-                background-position: center;
-            }
-        }
-
-        button:hover {
-            background: var(--dark-green);
-            color: var(--green-spot);
-        }
-    }
-}
-
-
-// Footer
-footer {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-auto-rows: 1fr 1fr 0.2fr 0.5fr;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    color: var(--green-light);
-    z-index: 1;
-    margin-top: -362px;
-
-    .footer-forma {
-        grid-column: 1/6;
-        grid-row: 1/5;
-        height: 100%;
-        width: 92%;
-        z-index: -1;
-    }
-
-    .description {
-        grid-column: 1/3;
-        grid-row: 2;
-        font-size: clamp(14px, 2vw, 25px);
-        width: 90%;
-        padding-left: 78px;
-        padding-bottom: 30px;
-    }
-    
-    .contact-1-img {
-        width: 2vw;
-        height: 2vw;
-        align-self: end;
-        margin-bottom: 15px;
-        grid-column: 3/4;
-        grid-row: 1;
-    }
-
-    .contact-1 {
-        grid-column: 3/4;
-        grid-row: 2;
-        font-size: clamp(11px, 1vw, 21px);
-    }
-
-    .contact-2-img {
-        width: 2vw;
-        height: 2vw;
-        align-self: end;
-        margin-bottom: 15px;
-        grid-column: 4/5;
-        grid-row: 1;
-        transform: translate(-78px, 0);
-    }
-
-    .contact-2 {
-        grid-column: 4/5;
-        grid-row: 2;
-        font-size: clamp(11px, 1vw, 21px);
-        transform: translate(-78px, 0);
-    }
-
-    .contact-title {
-        margin-bottom: 2.2vw;
-    }
-
-    hr {
-        background: var(--green-light);
-        width: 100%;
-        height: 1px;
-        border: none;
-        grid-column: 1/5;
-        grid-row: 3;
-        align-self: end;
-        transform: translate(78px, 0);
-        
-    }
-
-    .social {
-        grid-column: 1/5;
-        grid-row: 3;
-        display: flex;
-        gap: 30px;
-        font-size: clamp(11px, 1.2vw, 21px);
-        margin-bottom: 30px;
-        margin-left: 78px;
-
-        a {
-            color: var(--green-light);
-            opacity: 0.7;
-            transition: 0.3s;
-            position: relative;
-            overflow: hidden;
-        }
-
-        a:hover {
-            opacity: 1;
-        }
-
-        a::before {
-            content: "";
-            position: absolute;
-            bottom: -5%;
-            width: 100%;
-            height: 3px;
-            background:  var(--green-bright);
-            transform: translate(-105%);
-            transition: 0.3s;
-        }
-
-        a:hover::before {
-            transform: translate(0%);
-        }
-    }
-
-    .copywrites {
-        padding-left: 78px;
-        grid-column: 1/5;
-        grid-row: 4;
-        display: flex;
-        gap: 150px;
-        margin-top: 30px;
+        gap: 20px;
+        text-decoration: none;
         color: var(--green-light);
-        font-size: clamp(11px, 1.2vw, 21px);
-
-        a {
-            cursor: url("/icons/pointer-green.svg"), pointer;
-            color: var(--green-light);
-            position: relative;
-            top: 2px;
+        cursor: url("/icons/pointer-green.svg"), pointer;
+        img {
+            width: clamp(24px, 2.5vw, 47px);
+            height: clamp(24px, 2.5vw, 47px);
+            transform: rotate(180deg);
         }
     }
 
-
-    @media (max-width: 900px){
-        .description {
-            width: 80%;
-            font-size: 12px;
-        }
-
-        .contact-1, .contact-1-img {
-            transform: translate(-70px, 0);
-        }
-
-        .contact-2, .contact-2-img {
-            transform: translate(-140px, 0);
-        }
-
-    }
-
-
-    @media (max-width: 1440px){
-        grid-template-rows: 3fr 4fr 0fr 3fr;
-
-        .social {
-            margin-bottom: 15px;
-        }
-
-        .copywrites {
-            margin-top: 15px;
-        }
-    }
+    
 }
+
+
 
 
 
