header important update

--- a/src/styles/apie-mus.scss
+++ b/src/styles/apie-mus.scss
@@ -13,16 +13,15 @@ button, a, .logo, .right {
 
 header {
     .logo {
-        transform: translateY(0%);
-        clip-path: inset(0 0 0% 0);
+        transform: translateY(0%) !important;
+        clip-path: inset(0 0 0% 0) !important;
     }
 
     .right {
-        transform: translateY(0px);
-        clip-path: inset(0 0 0% 0);
+        transform: translateY(0px) !important;
+        clip-path: inset(0 0 0% 0) !important;
     }
 }
-
 
 main {
     min-height: 100vh;
