--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -39,12 +39,12 @@ header {
     .right {
         transform: translateY(0px);
         clip-path: inset(0 0 0% 0);
-        color: var(--blue-dark);
+        color: var(--blue-dark) !important;
 
         .menu .line,
         .menu .bubble,
         .language {
-            background: var(--blue-dark); 
+            background: var(--blue-dark) !important;
         }
     }
 }
