--- a/src/styles/naujienos-vidus.scss
+++ b/src/styles/naujienos-vidus.scss
@@ -42,6 +42,10 @@ main {
     position: relative;
     margin-bottom: 50px;
 
+    .category {
+        text-decoration: underline;
+    }
+
     .content {
         display: grid;
         grid-template-columns: 1fr;
