--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -4,16 +4,6 @@
     left: 0;
     width: 100vw;
     height: 100vh; /* Changed to viewport height */
-
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgb(0, 74, 78, 0.8);
-    }
 }
 
 .gallery {
@@ -184,10 +174,12 @@
         transform: translateY(-50%) scale(0.8);
     }
 
-    .swiper-button-prev:after,
+    .swiper-button-prev:after {
+        content: url("/naujienos/swiper-prev-icon.svg"); 
+    }
+    
     .swiper-button-next:after {
-        content: url("/naujienos/swiper-next-icon.svg");
-       
+        content: url("/naujienos/swiper-next-icon.svg"); 
     }
 
     .swiper-pagination-bullet {
@@ -282,44 +274,42 @@
 
 
 // Soc atsakmoybė
-.socialine-atsakomybe {
-    .gallery {
-        .gallery-shape::before {
-            background: var(--blue-extra-light);
-        }
+.socialine-atsakomybe .gallery {
 
-        .left, .right .right-image {
-            & > * {
-                cursor: url("/icons/pointer-blue.svg"), pointer;
-            }
-        }
-    }
-
-
-    .swiper {
-        .swiper-button-prev,
-        .swiper-button-next {
-            cursor: url("/icons/pointer-blue.svg"), pointer;
-            color: var(--blue-extra-light);
-            margin: 0 100px;
-        }
-    
-        .swiper-button-prev:hover,
-        .swiper-button-next:hover {
-            color: var(--blue-dark);
-        }
-
-        .swiper-pagination-bullet {
-            background: var(--blue-dark);
-        }
-
-        .swiper-exit {
-            cursor: url("/icons/pointer-blue.svg"), pointer;
-
-            svg:hover path {
-                fill: var(--blue-dark);
-            }
-        } 
+    .gallery-shape::before {
+        background: var(--blue-extra-light);
     }
 }
+.socialine-atsakomybe .swiper.gallery-swiper  {
+    background: rgb(21, 39, 106, 0.8);  
 
+    .swiper-button-prev:after {
+        content: url("/tvarumas/swiper-prev-icon.svg");
+    }
+
+    .swiper-button-next:after {
+        content: url("/tvarumas/swiper-next-icon.svg");
+    }
+
+    .swiper-slide-counter {
+        color: var(--blue-extra-light);
+    }
+
+    .swiper-exit {
+        color: var(--blue-extra-light);
+        cursor: url("/icons/pointer-blue.svg"), pointer;
+
+        .line {
+            color: var(--blue-extra-light);
+        }
+    }
+
+    .video-play-icon {
+        background: url('/tvarumas/video-icon.svg');
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+   
+}
