--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -10,6 +10,7 @@ button, a, .logo, .right {
     cursor: url('/icons/pointer-blue.svg'), pointer !important;
 }
 
+
 header {
     .logo {
         transform: translateY(0%);
@@ -229,6 +230,144 @@ header {
             margin-bottom: 50px;
         }
     }
+}
+
+.gallery-section {
+    pointer-events: none;
+}
+
+
+.tech-education {
+    position: relative;
+    top: 200px;
+    background: var(--blue-extra-light);
+    color: var(--blue-dark);
+    margin-bottom: 400px;
+    z-index: 1;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: -150px;
+        width: 120%;
+        height: 200px;
+        background: var(--blue-extra-light);
+        z-index: -1;
+        transform: rotate(-4deg);
+    }
+
+    .content {
+        width: 80%;
+        margin: auto;
+
+        h2 {
+            margin: 70px 0;
+        }
+
+        .projects {
+            display: grid;
+            grid-template-columns: 300px 1fr;
+            grid-template-rows: minmax(160px, 1fr);
+            position: relative;
+            left: -200px;
+
+            .left {
+                h2 {
+                    color: var(--blue-light);
+                    transform: rotate(-90deg) translateX(-50px);
+                }
+            }
+
+            .right {
+                max-height: 1000px;
+                overflow-y: auto;
+                position: relative;
+    
+    
+                &::-webkit-scrollbar {
+                    width: 1em;
+                    border: none;
+                    outline: none;
+                  }
+                   
+                  &::-webkit-scrollbar-track {
+                    background: var(--blue-light);
+                    border-radius: 20px;
+                  }
+                   
+                  &::-webkit-scrollbar-thumb {
+                    background: var(--blue-dark);
+                    border-radius: 20px;
+                  }
+
+                .project {
+                    position: relative;
+                    width: 95%;
+                    padding-bottom: 50px;
+                    
+                    .project-title {
+                        border-bottom: 1px solid var(--blue-dark);
+                        padding-bottom: 30px;
+                        margin-bottom: 30px;
+                        position: relative;
+                    }
+                    
+                    .project-description {
+                        max-width: 800px;
+                        width: 90%;
+                    }
+        
+                    .project-link {
+                        position: absolute;
+                        top: 2.2vw;
+                        right: -5px;
+        
+                        img {
+                            width: clamp(40px, 6vw, 81px);
+                        }
+                    }
+                }
+            }
+        }
+        
+    }
+
+  
+}
+
+.ataskaitos {
+    position: relative;
+    width: 80%;
+    margin: auto;
+    color: var(--blue-dark);
+
+    h3 {
+        margin-bottom: 60px;
+    }
+
+    .content {
+        display: grid;
+        grid-template-columns: 1fr 0.1fr;
+        grid-auto-rows: 100px;
+        align-items: center;
+        border-bottom: 1px solid var(--blue-dark);
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+
+        h4 {
+          
+            width: 100%;
+        }
+
+        .icon {
+       
+            img {
+                width: clamp(40px, 6vw, 81px);
+            }
+        }
+      
+    }
+  
 }
 
 
