--- a/src/styles/tvarumas.scss
+++ b/src/styles/tvarumas.scss
@@ -187,10 +187,11 @@ header {
     }
 
     .tabs {
-        grid-row: 2/4;
+        grid-row: 2;
         grid-column: 1/5;
         transform: translate(13vw, 0vw);
         width: 80%;
+        margin-bottom: 100px;
         
         .tab {
             display: flex;
@@ -304,6 +305,42 @@ header {
     }
 }
 
+
+.ataskaitos {
+    position: relative;
+    width: 75%;
+    margin: auto;
+    color: var(--blue-dark);
+
+    h3 {
+        margin-bottom: 60px;
+    }
+
+    .content {
+        display: grid;
+        grid-template-columns: 1fr 0.1fr;
+        grid-auto-rows: 100px;
+        align-items: center;
+        border-bottom: 1px solid var(--blue-dark);
+        padding-bottom: 30px;
+        margin-bottom: 30px;
+
+        h4 {
+          
+            width: 100%;
+        }
+
+        .icon {
+       
+            img {
+                width: clamp(40px, 6vw, 81px);
+            }
+        }
+      
+    }
+  
+}
+
 // Footer
 footer {
     display: grid;
@@ -312,7 +349,6 @@ footer {
     height: 450px;
     line-height: 25px;
     position: relative;
-    top: -386px;
     margin-bottom: -300px;
 
   
