--- a/src/styles/socialine-atsakomybe.scss
+++ b/src/styles/socialine-atsakomybe.scss
@@ -61,7 +61,7 @@ header {
 .section-1 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 600px;
+    grid-template-rows: 600px 400px;
     color: var(--blue-dark);
 
 
